# sary

./: ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h.in  configure  configure.in  sary.h  sary.pc.in  sary.spec  sary.spec.in
debian/: Makefile.am  Makefile.in  README.Debian  TODO  changelog  control  copyright  dirs  libsary-dev.files  libsary5.files  libsary5.postinst  rules  sary-doc.doc-base  sary-doc.doc-base.ja  sary-doc.doc-base.libsary  sary-doc.doc-base.libsary-ja  sary-doc.files  sary.files
docs/: Makefile.am  Makefile.in  sary.css
docs/en/: Makefile.am  Makefile.in  libsary.html  suffix-array.html
docs/images/: Makefile.am  Makefile.in
docs/ja/: Makefile.am  Makefile.in  libsary.html  suffix-array.html
man/: Makefile.am  Makefile.in  mksary.1  sary.1
sary/: Makefile.am  Makefile.in  array.c  array.h  bsearch.c  bsearch.h  builder.c  builder.h  cache.c  cache.h  i.h  ipoint.c  ipoint.h  merger.c  merger.h  mkqsort.c  mkqsort.h  mmap.c  mmap.h  progress.c  progress.h  saryconfig.h  saryconfig.h.in  searcher.c  searcher.h  sorter.c  sorter.h  str.c  str.h  text.c  text.h  version.c  version.c.in  writer.c  writer.h
src/: Makefile.am  Makefile.in  cache-test.c  cat-test.c  cat-test2.c  isearch-test.c  mksary.c  multi-test.c  repeated-test.c  sary.c  search-benchmark.c
tests/: Makefile.am  Makefile.in  all-substrs.pl  array-1  byte-indexer.pl  cache-1  cat-1  cat-2  eucjp.txt  gen-icase-data.pl  isearch-1  iso-8859-1  iso-8859-1.txt  line-indexer.pl  mksary-1  mksary-2  mksary-3  mksary-4  mksary-5  multi-1  null-1  null.txt  repeated.txt  sample.pl  sary-1  sary-2  sary-3  sary-4  sary-5  sary-6  sary-7  sary-8  sary-9  tagged.txt  word-indexer.pl  words.txt
